# tinyGPT

./: .gitignore  LICENSE  Papers.ipynb  README.md  bench.py  gpt.py  gpt2-dev.ipynb  gpt_dev.ipynb  hardware.ipynb  model.py  nn_brainstorm.ipynb  notes.ipynb  pyproject.toml  qwen2_model.py  requirements.txt  run.sh  scaling_laws.ipynb  train.py  train_scratch.py
config/: gpt2_params.py  qwen_params.py  small_param.py  small_params.py
dev/: transformer_sizing.ipynb
runs/: run.sh
scripts/: out.py  train.py  train_gpt2.py  train_qwen.py
tinygpt/: bench.py  bigram.py  configurator.py  gpt.py  model.py  model_qwen.py  muon.py  out.py
tinygpt/data/: prepare.py  prepare_openweb.py  prepare_shakesp_char.py  prepare_shakespeare.py  prepare_story.py
