[project]
name = "tinygpt"
version = "0.1.0"
description = "simple project for gpt pre-training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
